# user-resources-slurm

./: Cargo.toml  LICENSE
src/: unity-compute.sh  unity-slurm-find-nodes.sh  unity-slurm-gypsum-access.sh  unity-slurm-job-time-usage.sh  unity-slurm-list-constraints.sh  unity-slurm-set-default-account.rs
src/unity_user_resources_slurm/: unity-slurm-partition-usage.py
src/user_resources_slurm/: unity-slurm-account-list.sh  unity-slurm-account-total-usage.py  unity-slurm-account-usage.py  unity-slurm-job-top.py  unity-slurm-node-usage.py  unity-slurm-partition-usage.py  unity-slurm-set-default-account.rs
