[package]
name = "user-resources-slurm"
version = "0.1.0"
authors = ["Simon Leary <simon.leary42@proton.me>"]
edition = "2018"

[dependencies]
nix = { version = "0.29.0", features = ["user"] }
serde_json = "1.0.120"

[[bin]]
name = "unity-slurm-set-default-account"
path = "src/unity-slurm-set-default-account.rs"
